fix: single responsability
